<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <TextView
        android:id="@+id/txtsecurity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        android:text="@string/security_"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pink_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pink_card"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/pink"
        app:cardCornerRadius="32dp"
        app:cardElevation="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtsecurity"/>
    <TextView
        android:id="@+id/txtsos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="@dimen/_16dp"
        android:text="@string/sos"
        android:textColor="#FFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/pink_card"
        app:layout_constraintTop_toTopOf="@+id/pink_card" />

    <TextView
        android:id="@+id/txtsosmessage"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="@dimen/_16dp"
        android:text="@string/in_case_of_emergency_keep_telling_your_trusted_contacts_to_contact_me"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/imgsos"
        app:layout_constraintStart_toStartOf="@+id/pink_card"
        app:layout_constraintTop_toBottomOf="@id/txtsos" />

    <ImageView
        android:id="@+id/imgsos"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_margin="@dimen/_16dp"
        android:elevation="@dimen/_16dp"
        android:src="@drawable/ic_sos"
        app:layout_constraintBottom_toBottomOf="@id/pink_card"
        app:layout_constraintEnd_toEndOf="@+id/pink_card"
        app:layout_constraintTop_toTopOf="@+id/pink_card"
        android:contentDescription="@string/imagesos" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/green_card"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/green"
        app:cardCornerRadius="32dp"
        app:cardElevation="@dimen/_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pink_card" />

    <TextView
        android:id="@+id/txtgaurd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="@dimen/_16dp"
        android:text="@string/guard"
        android:textColor="#FFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/green_card"
        app:layout_constraintTop_toTopOf="@+id/green_card" />

    <ImageView
        android:id="@+id/imgguard"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:elevation="@dimen/_16dp"
        android:src="@drawable/ic_guard"
        android:layout_margin="@dimen/_16dp"
        app:layout_constraintBottom_toBottomOf="@id/green_card"
        app:layout_constraintEnd_toEndOf="@+id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card"
        android:contentDescription="@string/guardpic" />

    <TextView
        android:id="@+id/gaurdmsg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        android:elevation="@dimen/_16dp"
        android:text="@string/open_when_you_re_in_potential_dangerous_journey"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/imgguard"
        app:layout_constraintEnd_toEndOf="@+id/green_card"
        app:layout_constraintStart_toStartOf="@+id/green_card"
        app:layout_constraintTop_toBottomOf="@id/txtgaurd" />

    <EditText
        android:id="@+id/invite_mail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        android:hint="@string/enter_email_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/green_card" />

    <Button
        android:id="@+id/send_invite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        android:text="@string/invite"
        app:layout_constraintBottom_toBottomOf="@+id/invite_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/invite_mail"
        app:layout_constraintTop_toTopOf="@+id/invite_mail" />

    <TextView
        android:id="@+id/your_invites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        android:layout_marginTop="8dp"
        android:text="@string/your_invites"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invite_mail" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/invite_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your_invites"
        tools:listitem="@layout/item_invite_mail"/>

</androidx.constraintlayout.widget.ConstraintLayout>