<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_16dp"
    android:background="@color/material_dynamic_primary95"
    app:cardCornerRadius="@dimen/_32dp"
    app:cardElevation="@dimen/_8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16dp">

        <ImageView
            android:id="@+id/img_user"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:elevation="@dimen/_16dp"
            android:src="@drawable/ic_user_color_two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:text="@string/karan_jadaun"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/img_user"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_location"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_action_name"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:tint="@color/green" />

        <TextView
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textStyle="bold"
            android:text="@string/dubai_united_arab_emirates"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_location"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_16_40"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/name" />


        <LinearLayout
            android:id="@+id/lin_battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8dp"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/lin_distance"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@id/img_user"
            app:layout_constraintTop_toBottomOf="@id/img_user">

            <ImageView
                android:id="@+id/img_battery"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_battery"
                app:tint="@color/green" />

            <TextView
                android:id="@+id/battery_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/_90"
                android:textColor="@color/green"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/lin_wifi"
            app:layout_constraintStart_toEndOf="@id/lin_battery"
            app:layout_constraintTop_toBottomOf="@id/img_user">

            <ImageView
                android:id="@+id/img_distance"
                android:layout_width="16dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_distance"
                app:layout_constraintStart_toEndOf="@id/battery_percent"
                app:layout_constraintTop_toBottomOf="@id/img_user"
                app:tint="#b197dc" />

            <TextView
                android:id="@+id/distance_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/_223m"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/img_battery"
                app:layout_constraintStart_toEndOf="@id/img_distance"
                app:layout_constraintTop_toTopOf="@id/img_battery" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/img_call"
            app:layout_constraintStart_toEndOf="@id/lin_distance"
            app:layout_constraintTop_toBottomOf="@id/img_user">

            <ImageView
                android:id="@+id/img_wifi"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_wifi"
                app:layout_constraintStart_toEndOf="@id/distance_value"
                app:layout_constraintTop_toBottomOf="@id/img_user" />

            <TextView
                android:id="@+id/wifi_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/wifi"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/img_battery"
                app:layout_constraintStart_toEndOf="@id/img_wifi"
                app:layout_constraintTop_toTopOf="@id/img_battery" />
        </LinearLayout>


        <ImageView
            android:id="@+id/img_call"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="@dimen/_8dp"
            android:src="@drawable/ic_phone"
            app:layout_constraintBottom_toBottomOf="@id/lin_battery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/lin_battery" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
